# core

./: .busted  .gitignore  CMakeLists.txt  LICENSE  TODO.md  build.sh  build.zsh  clean.sh  clean.zsh  conanfile.py  generate-unicode-headers.zsh  go.mod  install.sh  install.zsh  luacore-scm-1.rockspec  start.sh  test.sh  test.zsh  uninstall.sh
ccore/: CMakeLists.txt
ccore/cmake/: ccore.pc.in
ccore/include/c/ccore/: allocator.h  array_list.h  charsets.h  core.h  encodings.h  iterator.h  linked_list.h  queue.h  reader.h  stack.h  strings.h  stringss.h  unicode.h
ccore/include/c/ccore/charsets/: ascii.h  latin1.h
ccore/include/c/ccore/encodings/: latin1.h
ccore/include/c/ccore/serialization/: json.h
ccore/include/c/ccore/strings/: strings_reader.h
ccore/include/cxx/ccore/: integral.hxx
ccore/src/c/: allocator.c  core.c
ccore/src/c/primitive/: strings.c
ccore/src/c/primitive/charsets/: ascii.c  latin1.c
ccore/src/c/primitive/encodings/: latin1.c
ccore/src/c/primitive/strings/: strings_reader.c
ccore/src/c/serialization/json/: internal.h  lexer.c  lexer_test.cxx  parser.c
ccore/src/cxx/: array_list.cxx  array_list_impl.cxx  array_list_test.cxx  container_allocator.hxx  integral.cxx  integral_test.cxx  iterator.cxx  iterator_internal.hxx  linked_list.cxx  linked_list_impl.cxx  linked_list_test.cxx  queue.cxx  stack.cxx  stack_test.cxx
cmake/: CoreConfig.cmake.in  cmake_uninstall.cmake.in  core.pc.in
gocore/src/go/primitive/: ordered_map.go
include/c/core/: definitions.h  stack.h
include/core/: integral.hpp  stack.hpp
luacore/: CMakeLists.txt
luacore/cmake/: luacore.pc.in
luacore/lua/: luacore.lua
luacore/lua/luacore/: env.lua
luacore/lua/luacore/types/: init.lua  path.lua  stack.lua  stack_test.lua
luacore/src/c/: canonicalize.c  defines.h  l_alloc.c  sys.c  xalloc.c
luacore/src/lua/: luacore.lua
luacore/src/lua/core/: core.lua
luacore/src/lua/luacore/: core.lua  loader.lua
luacore/src/lua/luacore/types/: init.lua  path.lua  path_test.lua  stack.lua
src/cxx/: definitions.h  integral_test.cpp  main.c  main.cpp  stack_test.cpp
src/cxx/util/: stack.hpp  stack_test.cpp
src/cxx/utils/: integral.cpp  integral.h  integral.hpp  list.cpp  list.h  list.hpp  list_test.cpp  stack.cpp  stack.h  stack.hpp  stack_test.cpp
tools/: CMakeLists.txt
tools/src/c/: generate-unicode-headers.c
